# AI_Powered_CMS-and-SaaS-Application

./: README.md  db.sqlite3  manage.py  pyproject.toml
ai_cms/: asgi.py  settings.py  urls.py  wsgi.py
blog/: admin.py  models.py
blog/migrations/: 0001_initial.py  0002_blog_author_blog_image_blog_meta_description_and_more.py
home_content/: admin.py  apps.py  models.py  views.py
home_content/migrations/: 0001_initial.py  0002_portfolio.py  0003_team.py  0004_team_position.py  0005_testimonial.py  0006_contact.py  0007_appsettings.py
myenv/: pyvenv.cfg
static/__assets/css/: custom-animation.css  main.css
static/__assets/js/: ScrollTrigger.min.js  main.js  matter.min.js  matterjs-custom.js
static/assets/css/: style.css
static/assets/js/: main.js
static/assets/maps/default/: _spacing.scss
static/assets/maps/elements/: _dark-version.scss  _pricing.scss  _search-generator.scss
templates/: base.html  contentwriting.html  emailwriting.html  footer.html  header.html  home.html  index-3.html  reportwriting.html
templates/admin/: custom_blog_change_form.html  custom_contact_change_form.html  custom_team_change_form.html
templates/components/: about.html  chooseus.html  contact.html  contentwriting.html  emailwriting.html  featured.html  hero_area.html  portfolio.html  reportwriting.html  service copy.html  team.html  testimonial.html
